--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tsmurer</title>
-    <link rel="stylesheet" href="dist/styles.css"> <!-- Link to your CSS if needed -->
+    <link rel="stylesheet" href="dist/style.css"> <!-- Link to your CSS if needed -->
 </head>
 <body>
     <h1>Sorry! This is under construction</h1>
