--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <span class="bar"></span>
       <span class="bar"></span>
     </div>
-    <ul class="nav no-search">
+    <ul class="navbar__buttons">
       <li><a href="/" class="active">Home</a></li>
       <li><a href="/about/" class="">About</a></li>
       <li><a href="/projects/" class="">Projects</a></li>
