--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me</title>
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="icon" href="/images/favicon/home.ico" type="image/x-icon">
+  
 </head>
 <body>
   <header>
@@ -31,6 +33,9 @@
 
   <main>
     
+<link rel="icon" href="/images/favicon/about.ico" type="image/x-icon">
+
+
 
   <h1>About Me</h1>
   <p>Hello, I'm Tiago Murer, a web developer with a passion for creating clean, efficient, and user-friendly websites.</p>
