--- a/projects/index.html
+++ b/projects/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Projects</title>
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="icon" href="/images/favicon/home.ico" type="image/x-icon">
+  
 </head>
 <body>
   <header>
@@ -31,6 +33,9 @@
 
   <main>
     
+<link rel="icon" href="/images/favicon/projects.ico" type="image/x-icon">
+
+
 
   <h3> Projects </h3>
 
