--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="icon" href="/images/favicon/home.ico" type="image/x-icon">
+  
 </head>
 <body>
   <header>
@@ -31,6 +33,9 @@
 
   <main>
     
+<link rel="icon" href="/images/favicon/home.ico" type="image/x-icon">
+
+
 
   <div class="home-content">
     <div class="home-content__col home-content__col--1">
