--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <path d="M12 14V12M12 14V16M12 14H18C19.1046 14 20 13.1046 20 12M12 14H6C4.89543 14 4 13.1046 4 12M20 12V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V12M20 12V8C20 6.89543 19.1046 6 18 6H6C4.89543 6 4 6.89543 4 8V12M15 6V5C15 3.89543 14.1046 3 13 3H11C9.89543 3 9 3.89543 9 5V6" class="job-entry__icon-path"/>
   </svg>
     <div class="job-entry__data">
-        <span>Frontend Developer @ <strong>Minesoft</strong></span>
+        <span>Frontend Dev @ <strong>Minesoft</strong></span>
         <span class="date"><em>Mar 2021 - Aug 2021</em></span>
     </div>
 
@@ -92,7 +92,7 @@
     <path d="M12 14V12M12 14V16M12 14H18C19.1046 14 20 13.1046 20 12M12 14H6C4.89543 14 4 13.1046 4 12M20 12V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V12M20 12V8C20 6.89543 19.1046 6 18 6H6C4.89543 6 4 6.89543 4 8V12M15 6V5C15 3.89543 14.1046 3 13 3H11C9.89543 3 9 3.89543 9 5V6" class="job-entry__icon-path"/>
   </svg>
     <div class="job-entry__data">
-        <span>Fullstack Developer @ <strong>Tata Consultancy Services</strong></span>
+        <span>Fullstack Dev @ <strong>TCS</strong></span>
         <span class="date"><em>Sep 2021 - Present</em></span>
     </div>
 
