--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <path d="M12 14V12M12 14V16M12 14H18C19.1046 14 20 13.1046 20 12M12 14H6C4.89543 14 4 13.1046 4 12M20 12V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V12M20 12V8C20 6.89543 19.1046 6 18 6H6C4.89543 6 4 6.89543 4 8V12M15 6V5C15 3.89543 14.1046 3 13 3H11C9.89543 3 9 3.89543 9 5V6" class="job-entry__icon-path"/>
   </svg>
     <div class="job-entry__data">
-        <span>Intern @ <strong>InfinitySys</strong></span>
-        <span class="date"><em>Mar 2019 - Dec 2019</em></span>
+        <span> @ <strong>InfinitySys</strong></span>
+        <span class="date"><em>Jan 2023 - Present</em></span>
     </div>
 
 </div>
@@ -81,8 +81,8 @@
     <path d="M12 14V12M12 14V16M12 14H18C19.1046 14 20 13.1046 20 12M12 14H6C4.89543 14 4 13.1046 4 12M20 12V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V12M20 12V8C20 6.89543 19.1046 6 18 6H6C4.89543 6 4 6.89543 4 8V12M15 6V5C15 3.89543 14.1046 3 13 3H11C9.89543 3 9 3.89543 9 5V6" class="job-entry__icon-path"/>
   </svg>
     <div class="job-entry__data">
-        <span>Frontend Dev @ <strong>Minesoft</strong></span>
-        <span class="date"><em>Mar 2021 - Aug 2021</em></span>
+        <span> @ <strong>Minesoft</strong></span>
+        <span class="date"><em>Jan 2023 - Present</em></span>
     </div>
 
 </div>
@@ -92,14 +92,15 @@
     <path d="M12 14V12M12 14V16M12 14H18C19.1046 14 20 13.1046 20 12M12 14H6C4.89543 14 4 13.1046 4 12M20 12V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V12M20 12V8C20 6.89543 19.1046 6 18 6H6C4.89543 6 4 6.89543 4 8V12M15 6V5C15 3.89543 14.1046 3 13 3H11C9.89543 3 9 3.89543 9 5V6" class="job-entry__icon-path"/>
   </svg>
     <div class="job-entry__data">
-        <span>Fullstack Dev @ <strong>TCS</strong></span>
-        <span class="date"><em>Sep 2021 - Present</em></span>
+        <span> @ <strong>Tata Consultancy </strong></span>
+        <span class="date"><em>Jan 2022 - Dec 2022</em></span>
     </div>
 
 </div>
         
       </div>
       <hr>
+      <h3 class="subtitle">Things I can do</h3>
     </div>
   </div>
 
@@ -115,9 +116,9 @@
       <li><a href="/contact/">Contact</a></li>
     </ul>
     <div class="social-media">
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+      <a href="https://github.com/tsmurer" target="_blank">GitHub</a>
       <a href="https://twitter.com/yourusername" target="_blank">Twitter</a>
-      <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/tiagomurer/" target="_blank">LinkedIn</a>
     </div>
   </div>
 </footer>
