--- a/projects/index.html
+++ b/projects/index.html
@@ -37,7 +37,9 @@
 
 
 
-  <h3> Projects </h3>
+  <h1>Projects</h1>
+  <p>This section is under construction</p>
+  <p>Please be patient</p>
 
   </main>
   
