--- a/about/index.html
+++ b/about/index.html
@@ -38,8 +38,8 @@
 
 
   <h1>About Me</h1>
-  <p>Hello, I'm Tiago Murer, a web developer with a passion for creating clean, efficient, and user-friendly websites.</p>
-  <p>This is the about page where I share details about myself and my work.</p>
+  <p>This section is under construction</p>
+  <p>Please be patient</p>
 
   </main>
   
