--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
+  <title>Contact</title>
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="icon" href="/images/favicon/home.ico" type="image/x-icon">
   
@@ -22,7 +22,7 @@
     </div>
     <ul class="navbar__buttons">
       <li><a href="/" class="">Home</a></li>
-      <li><a href="/about/" class="active">About</a></li>
+      <li><a href="/about/" class="">About</a></li>
       <li><a href="/projects/" class="">Projects</a></li>
     </ul>
   </nav>
@@ -33,13 +33,18 @@
 
   <main>
     
-<link rel="icon" href="/images/favicon/about.ico" type="image/x-icon">
+<link rel="icon" href="/images/favicon/loudspeaker.ico" type="image/x-icon">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
 
-  <h1>About Me</h1>
-  <p>Hello, I'm Tiago Murer, a web developer with a passion for creating clean, efficient, and user-friendly websites.</p>
-  <p>This is the about page where I share details about myself and my work.</p>
+<section class="contact">
+    <h1>Get in Touch</h1>
+    <p>🚧 This section is still a work in progress, but don't worry, you can still reach me!</p>
+    <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/tiagomurer" target="_blank"> LinkedIn</a> or drop me an email at <a href="mailto:tiagostaurenghi@gmail.com">tiagostaurenghi@gmail.com</a>.</p>
+</section>
+
+
 
   </main>
   
