--- a/about/index.html
+++ b/about/index.html
@@ -24,6 +24,7 @@
       <li><a href="/" class="">Home</a></li>
       <li><a href="/about/" class="active">About</a></li>
       <li><a href="/projects/" class="">Projects</a></li>
+      <li><a href="/contact/" class="">Contact</a></li>
     </ul>
   </nav>
   </div>
