--- a/projects/index.html
+++ b/projects/index.html
@@ -24,6 +24,7 @@
       <li><a href="/" class="">Home</a></li>
       <li><a href="/about/" class="">About</a></li>
       <li><a href="/projects/" class="active">Projects</a></li>
+      <li><a href="/contact/" class="">Contact</a></li>
     </ul>
   </nav>
   </div>
@@ -37,7 +38,9 @@
 
 
 
-  <h3> Projects </h3>
+  <h1>Projects</h1>
+  <p>This section is under construction</p>
+  <p>Please be patient</p>
 
   </main>
   
