--- a/about/index.html
+++ b/about/index.html
@@ -24,6 +24,7 @@
       <li><a href="/" class="">Home</a></li>
       <li><a href="/about/" class="active">About</a></li>
       <li><a href="/projects/" class="">Projects</a></li>
+      <li><a href="/contact/" class="">Contact</a></li>
     </ul>
   </nav>
   </div>
@@ -38,8 +39,8 @@
 
 
   <h1>About Me</h1>
-  <p>Hello, I'm Tiago Murer, a web developer with a passion for creating clean, efficient, and user-friendly websites.</p>
-  <p>This is the about page where I share details about myself and my work.</p>
+  <p>This section is under construction</p>
+  <p>Please be patient</p>
 
   </main>
   
