--- a/about/index.html
+++ b/about/index.html
@@ -38,9 +38,15 @@
 
 
 
-  <h1>About Me</h1>
-  <p>This section is under construction</p>
-  <p>Please be patient</p>
+<h1>About Me</h1>
+<p>My name is <strong>Tiago Murer</strong>, and I am a Brazilian software developer based in São Paulo, Brazil.</p>
+<p>My journey into programming began unexpectedly. After graduating in law in 2016, I discovered JavaScript through Khan Academy, which ignited my passion for technology.</p>
+<p>In 2018, I took a leap of faith to change my career path by enrolling in a technology program. Since then, I have embraced my new vocation and have grown immensely in this field.</p>
+<p>Today, I am a Software Engineer with <strong id="exp-years"></strong> years of experience in web development.</p>
+<p>Currently, I'm focused on improving my skills in web development backend with <strong>TypeScript</strong> and exploring <strong>cloud technologies</strong>.
+<p>When I am not coding, you can find me reading a fantasy or horror novel</p>
+<p>Feel free to connect with me!</p>
+<script> document.getElementById('exp-years').textContent = new Date().getFullYear() - 2020; </script>
 
   </main>
   
